Reassigned active classes to correct pages and fixed spacing of content h1

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,7 +82,7 @@ p {
 
 .content h1 {
   font-size: 64px;
-  margin-bottom: 24px;
+  margin-bottom: 100px;
 }
 
 .content h3 {
@@ -201,6 +201,7 @@ nav li.active a {
 
   .content {
     text-align: center;
+    margin-top: 50px;
   }
   .content h1 {
     font-size: 48px;
